--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
      "baseUrl": ".",
     "paths": {
       "@/app/*": ["./app/*"],
-      "@/types/*": ["./types/*"]
+      "@/types/*": ["./types/*"],
+      "@/lib/*": ["./lib/*"]
     }
   },
   "include": [
